syntax = "proto3";

option java_package = "com.nicholasfragiskatos.preferancestorageexample";
option java_multiple_files = true;

message MySettings {
    string first_name = 1;
    string last_name = 2;
    string favorite_color = 3;
    int32 favorite_ice_cream_flavor = 4;
}